# sbell

./: CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  compile_commands.json  file.pub  installer  s.txt  sbell
.cache/clangd/index/: conffile.cpp.0A034AF634220FD6.idx  conffile.hpp.6A11402AB31D9B7B.idx  defs.hpp.1A415974333BDA35.idx  sbell.cpp.149A7CDAD5D2AD2F.idx  translator.cpp.31A681FFEF64877D.idx  translator.hpp.3807761CC9CF06AB.idx
Sbell/: FETCH_HEAD  config  packed-refs
Sbell/objects/pack/: pack-ac0729b3b14d199e6b7a5eaea229beae0e52ad35.idx  pack-ac0729b3b14d199e6b7a5eaea229beae0e52ad35.pack  pack-ac0729b3b14d199e6b7a5eaea229beae0e52ad35.rev
Sbell/refs/heads/: main
include/: defs.hpp
lang/: en.json  es.json  gl.json
src/: .sbell.cpp.swp  conffile.cpp  conffile.cpp.save  installer.cpp  sbell.cpp  translator.cpp  ç
src/include/: .conffile.hpp.swp  conffile.hpp  defs.hpp  translator.hpp
